agentd-session-reporting: Advertise discovered session ranges